crates/parser/src/snapshots/parser__build_log__tests__parse@003.txt.snap
---
source: crates/parser/src/build_log.rs
expression: parse_build_log(&text)
input_file: crates/parser/src/test_data/build_log/003.txt
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "./parent.tex",
            level: Warning,
            message: "LaTeX Warning: Citation `foo' on page 1 undefined on input line 6.",
            hint: None,
            line: Some(
                5,
            ),
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Warning,
            message: "LaTeX Warning: There were undefined references.",
            hint: None,
            line: None,
        },
    ],
}
