crates/parser/src/snapshots/parser__build_log__tests__parse@005.txt.snap
---
source: crates/parser/src/build_log.rs
expression: parse_build_log(&text)
input_file: crates/parser/src/test_data/build_log/005.txt
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "./parent.tex",
            level: Warning,
            message: "Package biblatex Warning: 'babel/polyglossia' detected but 'csquotes' missing. Loading 'csquotes' recommended.",
            hint: None,
            line: None,
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Warning,
            message: "LaTeX Warning: There were undefined references.",
            hint: None,
            line: None,
        },
        BuildError {
            relative_path: "./parent.tex",
            level: Warning,
            message: "Package biblatex Warning: Please (re)run Biber on the file: parent and rerun LaTeX afterwards.",
            hint: None,
            line: None,
        },
    ],
}
