crates/parser/src/snapshots/parser__build_log__tests__parse@007.txt.snap
---
source: crates/parser/src/build_log.rs
expression: parse_build_log(&text)
input_file: crates/parser/src/test_data/build_log/007.txt
---
BuildLog {
    errors: [
        BuildError {
            relative_path: "/some/folder/a.tex",
            level: Error,
            message: "Undefined control sequence.",
            hint: Some(
                "\\lsdkfjlskdfj",
            ),
            line: Some(
                3,
            ),
        },
    ],
}
